--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
   },
   "dependencies": {
     "antd": "^3.24.3",
+    "axios": "^0.19.0",
     "core-js": "^2.6.10",
     "dva": "^2.4.1",
+    "http-proxy-middleware": "^0.20.0",
     "react-document-title": "^2.0.3",
     "redux": "^4.0.4"
+  },
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:8080/",
+      "changeOrigin": true
+    }
   }
 }
